fix some small code style issues