@@ -143,7 +143,7 @@ public class IndividualPersonScoringParameters implements ScoringParametersForPe
 		}
 
 		// Last open ended dist group
-		int lastDist = copy.get(copy.size() - 1);
+		int lastDist = copy.getLast();
 		double lastUtil = distUtils.getDouble(distUtils.size() - 1);
 		groups[copy.size() - 1] = new DistanceGroup(lastDist, lastUtil, lastUtil / lastDist);
 
@@ -154,9 +154,9 @@ public class IndividualPersonScoringParameters implements ScoringParametersForPe
 		if (scoring.incomeDependent == AdvancedScoringConfigGroup.IncomeDependentScoring.none)
 			return Double.NaN;
 
-		log.info("reading income attribute using " + PersonUtils.class + " of all agents and compute global average.\n" +
+		log.info("reading income attribute using {} of all agents and compute global average.\n" +
 			"Make sure to set this attribute only to appropriate agents (i.e. true 'persons' and not freight agents) \n" +
-			"Income values <= 0 are ignored. Agents that have negative or 0 income will use the marginalUtilityOfMoney in their subpopulation's scoring params..");
+			"Income values <= 0 are ignored. Agents that have negative or 0 income will use the marginalUtilityOfMoney in their subpopulation's scoring params..", PersonUtils.class);
 		OptionalDouble averageIncome = population.getPersons().values().stream()
 			//consider only agents that have a specific income provided
 			.filter(person -> PersonUtils.getIncome(person) != null)
@@ -165,11 +165,11 @@ public class IndividualPersonScoringParameters implements ScoringParametersForPe
 			.average();
 
 		if (averageIncome.isEmpty()) {
-			throw new RuntimeException("you have enabled income dependent scoring but there is not a single income attribute in the population! " +
+			throw new IllegalArgumentException("you have enabled income dependent scoring but there is not a single income attribute in the population! " +
 				"If you are not aiming for person-specific marginalUtilityOfMoney, better use other PersonScoringParams, e.g. SubpopulationPersonScoringParams, which have higher performance." +
 				"Otherwise, please provide income attributes in the population...");
 		} else {
-			log.info("global average income is " + averageIncome);
+			log.info("global average income is {}", averageIncome);
 			return averageIncome.getAsDouble();
 		}
 	}
